--- a/styles/my web.css
+++ b/styles/my web.css
@@ -63,6 +63,9 @@ font-size: 24px;
     font-weight: 700;
     line-height: normal;
 
+
+    }
+
 }
 .picture{
     width: 802.9px;
@@ -74,7 +77,7 @@ font-size: 24px;
    background-image: url('../resources/Vectorrr.png');
    width: 1320px;
 height: 600px;
-padding: ;
+align-items: center;
 
 }
 .welcome{padding: 126px 552px 250px 125px;
@@ -89,6 +92,32 @@ letter-spacing: 7.04px;
 }
 
 .dolor{
+    width: 697px
     
     
+}
+.place{ align-items: center;
+    width: 1320px;
+height: 482px;
+flex-shrink: 0;
+background-color: burlywood;
+padding: auto;
+}
+.park{
+    color: #F00;
+text-align: center bottom;
+font-family: Inter;
+font-size: 32px;
+font-style: normal;
+font-weight: 600;
+line-height: 56px; /* 175% */
+text-transform: capitalize;
+}
+.btn{
+    align-items: center;
+padding: 16px 32px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+color: #FF0000;
 }
